[package]
name = "stomp_parser"
version = "0.1.0"
authors = ["Tobias Grasl <herblet@knowledge42.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom-trace ="0.2.1"
lazy_static = "1.4.0"
educe = "0.4.13"
paste = "1.0.5"

[dependencies.nom]
version = "6.0.1"
features = ["alloc"]
