[package]
name = "stomp_parser"
version = "0.1.0"
authors = ["Tobias Grasl <herblet@knowledge42.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom-trace ="0.2.1"
paste = "1.0.5"

[dependencies.nom]
version = "6.1.2"
features = ["alloc"]
